[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/Main Menu.png" type="Texture" id=2]
[ext_resource path="res://Images/Target2.png" type="Texture" id=3]
[ext_resource path="res://Font/Montserrat-SemiBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_color = Color( 0.298039, 0.298039, 0.298039, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.521569, 0.521569, 0.521569, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Main Menu" type="Sprite" parent="."]
position = Vector2( 189.853, 333.451 )
texture = ExtResource( 2 )

[node name="Target2" type="Sprite" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
position = Vector2( 191.935, 346.485 )
scale = Vector2( 2.68149, 2.99252 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="3x3 TimeAttack50" type="Button" parent="Control"]
modulate = Color( 0.94902, 0.905882, 0.384314, 1 )
margin_left = 193.984
margin_top = 379.162
margin_right = 325.984
margin_bottom = 505.162
rect_pivot_offset = Vector2( 107.938, 12.954 )
icon = ExtResource( 3 )
flat = true

[node name="2x2 TimeAttack50" type="Button" parent="Control"]
modulate = Color( 0.85098, 0.466667, 0.905882, 1 )
margin_left = 54.7038
margin_top = 378.26
margin_right = 186.704
margin_bottom = 504.26
rect_pivot_offset = Vector2( 107.938, 12.954 )
icon = ExtResource( 3 )
flat = true

[node name="3x3 TimeAttack10" type="Button" parent="Control"]
modulate = Color( 0.282353, 0.603922, 0.592157, 1 )
margin_left = 194.381
margin_top = 238.765
margin_right = 326.381
margin_bottom = 364.765
rect_pivot_offset = Vector2( 108.356, 154.078 )
icon = ExtResource( 3 )
flat = true

[node name="2x2 TimeAttack10" type="Button" parent="Control"]
modulate = Color( 0.176471, 0.976471, 0.207843, 1 )
margin_left = 55.4839
margin_top = 238.923
margin_right = 187.484
margin_bottom = 364.923
rect_pivot_offset = Vector2( 108.356, 154.078 )
icon = ExtResource( 3 )
flat = true

[node name="Title" type="Label" parent="Control"]
modulate = Color( 0.756863, 0.756863, 0.756863, 1 )
margin_left = 73.0225
margin_top = 65.3749
margin_right = 308.022
margin_bottom = 117.375
rect_pivot_offset = Vector2( 151.516, 28.3797 )
custom_fonts/font = SubResource( 1 )
text = "Quick-Tap!"

[node name="Title2" type="Label" parent="Control"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
margin_left = 147.842
margin_top = 182.714
margin_right = 239.842
margin_bottom = 234.714
rect_pivot_offset = Vector2( 151.516, 28.3797 )
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Num" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 236.798
margin_top = 415.628
margin_right = 307.799
margin_bottom = 486.628
rect_pivot_offset = Vector2( 22.55, 46.55 )
custom_fonts/font = SubResource( 2 )
text = "50"

[node name="Num2" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 97.5176
margin_top = 416.355
margin_right = 168.518
margin_bottom = 487.355
rect_pivot_offset = Vector2( 22.55, 46.55 )
custom_fonts/font = SubResource( 2 )
text = "50"

[node name="Num3" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 240.066
margin_top = 276.402
margin_right = 282.066
margin_bottom = 326.402
rect_pivot_offset = Vector2( 22.55, 46.55 )
custom_fonts/font = SubResource( 2 )
text = "10"

[node name="Num4" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 102.53
margin_top = 275.623
margin_right = 144.53
margin_bottom = 325.623
rect_pivot_offset = Vector2( 22.55, 46.55 )
custom_fonts/font = SubResource( 2 )
text = "10"

[node name="Dims" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.654902 )
margin_left = 242.991
margin_top = 462.909
margin_right = 279.991
margin_bottom = 488.909
rect_pivot_offset = Vector2( 16.5372, 13 )
custom_fonts/font = SubResource( 3 )
text = "3x3"

[node name="Dims2" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.654902 )
margin_left = 105.879
margin_top = 459.399
margin_right = 142.879
margin_bottom = 485.399
rect_pivot_offset = Vector2( 16.5372, 13 )
custom_fonts/font = SubResource( 3 )
text = "2x2"

[node name="Dims3" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.654902 )
margin_left = 242.608
margin_top = 320.924
margin_right = 279.608
margin_bottom = 346.924
rect_pivot_offset = Vector2( 16.5372, 13 )
custom_fonts/font = SubResource( 3 )
text = "3x3"

[node name="Dims4" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.654902 )
margin_left = 106.694
margin_top = 323.485
margin_right = 143.694
margin_bottom = 349.485
rect_pivot_offset = Vector2( 16.5372, 13 )
custom_fonts/font = SubResource( 3 )
text = "2x2"
[connection signal="button_down" from="Control/3x3 TimeAttack50" to="." method="_on_3x3_TimeAttack50_button_down"]
[connection signal="button_down" from="Control/2x2 TimeAttack50" to="." method="_on_2x2_TimeAttack50_button_down"]
[connection signal="button_down" from="Control/3x3 TimeAttack10" to="." method="_on_3x3_TimeAttack10_button_down"]
[connection signal="button_down" from="Control/2x2 TimeAttack10" to="." method="_on_2x2_TimeAttack10_button_down"]
